samples/_failures_safe/1761510951_eab3b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b4a2ab7.c: In function ‘main’:
./samples/SAFE/__tmp_3b4a2ab7.c:166:5: error: expected identifier or ‘(’ at end of input
  166 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_3b4a2ab7.c:166:5: error: expected declaration or statement at end of input
